--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix-web = "4.6.0"
+uuid = {version = "1.8.0", features = ["v4"]}
+serde = {version = "^1", features = ["derive"]}
+env_logger = "0.11.3"
+log = "0.4.21"
+strum_macros = "0.26.2"
+strum = {version = "0.26.2", features = ["derive"]}
+
