--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,4 @@ env_logger = "0.11.3"
 log = "0.4.21"
 strum_macros = "0.26.2"
 strum = {version = "0.26.2", features = ["derive"]}
-
+postgres = "0.19.8"
