--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-actix-web = "4.6.0"
+# Web / UUID
 uuid = {version = "1.8.0", features = ["v4"]}
+tokio = {version = "^1", features = ["full"]}
+axum = "^0.7"
+tower-http = {version = "^0.5", features = ["fs"]}
+tower-cookies = "^0"
+
+# JSON / Serde
 serde = {version = "^1", features = ["derive"]}
-env_logger = "0.11.3"
-log = "0.4.21"
-strum_macros = "0.26.2"
-strum = {version = "0.26.2", features = ["derive"]}
-postgres = "0.19.8"
+serde_json = "^1"
+
+[dev-dependencies]
+anyhow = "^1"
+httpc-test = "^0.1"
