--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,13 +13,17 @@ tower-http = {version = "^0.5", features = ["fs"]}
 tower-cookies = "^0"
 
 lazy_static = "^1"
+dotenv = "^0"
+chrono = "^0"
 
 # JSON / Serde
 jsonwebtoken = "^9"
 serde = {version = "^1", features = ["derive"]}
 serde_json = "^1"
-dotenv = "^0"
-chrono = "^0"
+
+# Hashing
+sha2 = "^0"
+hex = "^0"
 
 [dev-dependencies]
 anyhow = "^1"
