jwt system is now in use and tested. You need to send Authorization with in the header to communicate with users endpoints.

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
+# Database path
+DATABASE_URL=postgres://postgres:postgres@localhost:7580/postgres
+
+# Token secret as hexdecimal string.
 JWT_TOKEN=89D6425CF5429DF7F6ED29C8A8161
+# This span is in Days.
+JWT_LIFE_SPAN=14
