--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ uuid = {version = "1.8.0", features = ["v4"]}
 tokio = {version = "^1", features = ["full"]}
 sqlx = {version = "^0", features = ["postgres", "runtime-tokio-rustls", "chrono"]}
 axum = {version = "^0.7", features = ["macros"]}
+axum-extra = { version = "^0.9", features = ["typed-header"] }
 tower-http = {version = "^0.5", features = ["fs"]}
 tower-cookies = "^0"
 
