--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,14 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-# Web / UUID
-uuid = {version = "1.8.0", features = ["v4"]}
+# Web
 tokio = {version = "^1", features = ["full"]}
 sqlx = {version = "^0", features = ["postgres", "runtime-tokio-rustls", "chrono"]}
 axum = {version = "^0.7", features = ["macros"]}
 axum-extra = { version = "^0.9", features = ["typed-header"] }
-tower-http = {version = "^0.5", features = ["fs", "cors"]}
+tower-http = {version = "^0.6", features = ["fs", "cors"]}
 tower-cookies = "^0"
+uuid = { version = "^1", features = ["v4"] }
 
 lazy_static = "^1"
 dotenv = "^0"
