--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
 JWT_TOKEN=89D6425CF5429DF7F6ED29C8A8161
 # This span is in Days.
 JWT_LIFE_SPAN=14
+# This span is in Days.
+JWT_REFRESH_LIFE_SPAN=30
