--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ axum-extra = { version = "^0.9", features = ["typed-header"] }
 tower-http = {version = "^0.6", features = ["fs", "cors"]}
 tower-cookies = "^0"
 uuid = { version = "^1", features = ["v4"] }
+oauth2 = { version = "4", features = ["reqwest"] }
 
 lazy_static = "^1"
 dotenv = "^0"
